# Stock-Trading-DB

./: Cargo.toml  Dockerfile  README.md  compose.yaml
docs/: architecture.md  checklist.md  sql_schema_design.md
src/: lib.rs  main.rs
src/controllers/: account_controller.rs  cpp_controller.rs  instrument_controller.rs  mod.rs  order_controller.rs  postion_controller.rs
src/database/: connection.rs  mod.rs
src/macros/: mod.rs  sql_macros.rs
src/models/: account.rs  feature_set.rs  feature_sets.rs  instrument.rs  instruments.rs  labeled_data.rs  market_data_ticks.rs  ml_models.rs  mod.rs  order.rs  position.rs  positions.rs  prelude_model.rs  schema.sql  technical_indicators.rs  trade.rs  trades.rs
src/models/migrations/: 0001_schema.sql  0002_account_table.sql  0003_change_essential_tables.sql
src/networking/: cpp_server.rs  cpp_work_queue.rs  mod.rs  server.rs
src/networking/protocols/: cpp_protocols.rs  mod.rs
src/repositories/: account_repo.rs  instrument_repo.rs  market_data_repo.rs  ml_repo.rs  mod.rs  order_repo.rs  position_repo.rs  prelude.rs  prelude_repo.rs  trade_repo.rs
src/routes/: mod.rs  stockRoute.rs
